--- a/ProyectoWebApp/templates/ProyectoWebApp/base.html
+++ b/ProyectoWebApp/templates/ProyectoWebApp/base.html
@@ -21,7 +21,7 @@
 
     <h1 class="site-heading text-center text-white d-none d-lg-block">
       
-        <span class="site-heading-lower">shovino</span>
+        <span class="site-heading-lower">La vinoteca</span>
       </h1>
 
    
@@ -88,7 +88,7 @@
         	<a href="sample.html" class="link">Aviso legal</a> ·
         	<a href="sample.html" class="link">Cookies</a>
 		</p>
-        <p class="m-0 mbt1">&copy; shovino 2022</p>
+        <p class="m-0 mbt1">&copy; La Vinoteca 2022</p>
       </div>
 	</footer>
 
